--- a/index.ipynb
+++ b/index.ipynb
@@ -50,6 +50,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![img](img/choosing_test.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "#### ANOVA - the F test\n",
     "$F = \\frac{MS_{bet}}{MS_{within}}$"
